[gd_scene load_steps=4 format=3 uid="uid://bdbrtdccg06up"]

[ext_resource type="Script" uid="uid://byeh05k4j0hsi" path="res://addons/cyclops_level_builder/gui/docks/uv_editor/gizmos/gizmo_translate_2d.gd" id="1_0njil"]
[ext_resource type="PackedScene" uid="uid://qtb8hfvx84s" path="res://addons/cyclops_level_builder/gui/docks/uv_editor/gizmos/gizmo_arrow_2d.tscn" id="2_n4d6t"]
[ext_resource type="PackedScene" uid="uid://cqeuqgat4gbol" path="res://addons/cyclops_level_builder/gui/docks/uv_editor/gizmos/gizmo_rect_2d.tscn" id="3_yb2hw"]

[node name="GizmoTransform2d" type="Node2D"]
script = ExtResource("1_0njil")

[node name="axis_x" parent="." instance=ExtResource("2_n4d6t")]
unique_name_in_owner = true
color = Color(1, 0, 0, 1)
shaft_length = 50.0
head_base_length = 8.0
head_length = 16.0

[node name="axis_y" parent="." instance=ExtResource("2_n4d6t")]
unique_name_in_owner = true
rotation = -1.5708
color = Color(0, 1, 0, 1)
shaft_length = 50.0
head_base_length = 8.0
head_length = 16.0

[node name="plane_z" parent="." instance=ExtResource("3_yb2hw")]
unique_name_in_owner = true
color = Color(0, 0, 1, 0.501961)
color_outline = Color(0, 0, 1, 1)

[connection signal="dragged_to" from="axis_x" to="." method="_on_axis_x_dragged_to"]
[connection signal="pressed" from="axis_x" to="." method="_on_axis_x_pressed"]
[connection signal="released" from="axis_x" to="." method="_on_axis_x_released"]
[connection signal="dragged_to" from="axis_y" to="." method="_on_axis_y_dragged_to"]
[connection signal="pressed" from="axis_y" to="." method="_on_axis_y_pressed"]
[connection signal="released" from="axis_y" to="." method="_on_axis_y_released"]
[connection signal="dragged_to" from="plane_z" to="." method="_on_plane_z_dragged_to"]
[connection signal="pressed" from="plane_z" to="." method="_on_plane_z_pressed"]
[connection signal="released" from="plane_z" to="." method="_on_plane_z_released"]
